mise en place de la section description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    
+    <h2>DESCRIPTION</h2>
+    <p>Je m'appelle Gaëlla Horcelle YEHOUENOU. Du haut de mes 23ans, j'ai un Brevet de Technicien Supérieur (BTS) en Communication d'entreprise et une Licence Professionnelle en Techniques Commerciales et Marketing. Dans le but de me perfectionner et d'acquérire plus de compétences, je suis actuellement une formation en marketing digital grâce au programme WHISPA.  </p>
 </body>
 </html>
