--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <h2>FORMATIONS</h2>
+    <h5>Licence en Techniques Commerciales et Marketing</h5>
+    <p>Ecole Nationale d'Economie Appliquée et de Management ( ENEAM ) - Cotonou mai 2018 -
+        décembre 2019</p>
+    <h5>Brevet de Technicien Supérieur ( BTS) en Communication d'Entreprise</h5>
+    <p>Ecole Nationale D'Economie Appliquée et de Management ( ENEAM) - Cotonou décembre
+        2016 - juillet 2017</p>
+    <h5>Baccalauréat en Economie</h5>
+    <p>Ecole d'Enseignement Générale et Technique Laura -Vicuña - Cotonou octobre 2014 -
+        juillet 2015</p>
+
     
 </body>
 </html>
