mise en place de la section expériences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    
+    <h2>Expériences</h2>
+    <h5>Stagiaire</h5>
+    <p>Chic Créa - Cotonou mars 2019 - août 2019</p>
+    <ul>
+        <li>Accueil des clients;</li>
+        <li>Participation aux actions du e-marketing de l'entreprise;</li>
+        <li>Prospection.</li>
+    </ul>
+    <h5>Stagiaire</h5>
+    <p>Poste du Bénin - Cotonou octobre 2017 - décembre 2017</p>
+    <ul>
+        <li>Classement des courriers dans les boîtes postales;</li>
+        <li>Remplissage des livrets de paiements.</li>
+    </ul>
+    <h5>Stagiaire</h5>
+    <ul>
+        <li>Apurement des manifestes;</li>
+        <li>Dépouillement manuel des manifestes;</li>
+        <li>Saisie du dépouillement des manifestes;</li>
+        <li>Enregistrement des courriers;</li>
+        <li>Revue de presse sur la base des journaux reçus chaque jour.</li>
+    </ul>
 </body>
 </html>
