mise en place de la section Compétences

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="Style.css">
 </head>
 <body>
+    <h2>Compétences</h2>
+    <ul>
+        <li>
+            Microsoft office Excel: Création de tableaux, Analyse des données dans une feuille de calcul en utilisant des
+            formules, Insertion de calcul;
+        </li>
+        <li>Microsoft Office Word: Conception et gestion de courriers, Saisie de documents, Mise en forme de
+            documents (paragraphe, police, Numérotation, image etc), création d'entête et pieds de page, Impression de
+            documents, Conception et mise en forme de tableaux;
+        </li>
+        <li>
+            SphinxV5: Création et Analyse de questionnaire, Traitement et Analyse de données quantitatives et
+            qualitatives, Présentation de résultats.
+        </li>
+        <li>
+            Photoshop: affiches, carte de visite,
+        </li>
+        <li>
+            Figma:présentation
+        </li>
+        <li>
+            Html, CSS, Bootstrap
+        </li>
+    </ul>
     
 </body>
 </html>
